--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "ionic:build": "ionic-app-scripts build",
     "ionic:serve": "ionic-app-scripts serve"
   },
+  { "engines" : { "node" : ">=0.12" } 
+  },
+
   "dependencies": {
     "@angular/common": "4.4.4",
     "@angular/compiler": "4.4.4",
