--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "devDependencies": {
     "@ionic/app-scripts": "3.0.1",
     "typescript": "2.3.4",
-    "node" : ">=0.12"
+    "node" : "14.18.1"
   },
   "description": "An Ionic project"
 }
