--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "http://ionicframework.com/",
-  "private": true,
+  "private": false,
+  "engines": {
+    "node": "6.11.3",
+    "npm": "3.10.10"
+  },
   "scripts": {
     "clean": "ionic-app-scripts clean",
     "build": "ionic-app-scripts build",
@@ -33,8 +37,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.0.1",
-    "typescript": "2.3.4",
-    "node" : "14.18.1"
+    "typescript": "2.3.4"
   },
   "description": "An Ionic project"
 }
