--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "ionic-app-scripts build",
     "lint": "ionic-app-scripts lint",
     "ionic:build": "ionic-app-scripts build",
-    "ionic:serve": "ionic-app-scripts serve"
+    "ionic:serve": "ionic-app-scripts serve",
+     "postinstall": "npm rebuild node-sass && npm install --unsafe-perm -f node-sass"
   },
 
   "dependencies": {
