--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "homepage": "http://ionicframework.com/",
   "private": false,
   "engines": {
-    "node": "16.13.0",
-    "npm": "8.1.0"
+    "node": "0.12.0",
+    "npm": "2.5.1"
   },
   "scripts": {
     "clean": "ionic-app-scripts clean",
@@ -14,7 +14,7 @@
     "lint": "ionic-app-scripts lint",
     "heroku-postbuild": "npm rebuild node-sass",
     "ionic:build": "ionic-app-scripts build",
-    "ionic:serve": "ionic-app-scripts serve",
+    "ionic:serve": "ionic-app-scripts serve"
   },
 
   "dependencies": {
